支持保存配置文件

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ include_directories(src/core src/ui)
 add_executable(GuessDraw
         src/main.cpp
         src/core/drawing.cpp
+        src/core/config.cpp
         src/ui/tray.cpp
         src/ui/settings.cpp
         src/ui/hotkeys.cpp
